[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
duty = ">=0.6.0"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"
mkdocs = ">=1.2.2"
mkdocs-coverage = ">=0.2.1"
mkdocs-macros-plugin = ">=0.5.0"
mkdocs-material = ">=6.2.7"
mkdocstrings = ">=0.16.2"

[tool.poetry]
name = "demoagent"
version = "0.1.0"
description = "This is my demo agent."
authors = ["Mark Bonicillo <mark.bonicillo@pnnl.gov>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/bonicim/demoagent"
homepage = "https://github.com/bonicim/demoagent"
keywords = []
packages = [ { include = "demoagent", from = "demoagent" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"

[tool.poetry.scripts]
demoagent = "demoagent.agent:main"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
